@startuml
namespace _struct {
    class Args << (S,Aquamarine) >> {
        + Num1 int

    }
    class Foo << (S,Aquamarine) >> {
        + Sum(args Args, reply *int) error

    }
    class _struct.Foo << (T, #FF7700) >>  {
    }
}


namespace client {
    class Call << (S,Aquamarine) >> {
        + Seq uint64
        + ServiceMethod string
        + Args any
        + Reply any
        + Error error
        + Done <font color=blue>chan</font> *Call

        - done() 

    }
    class Client << (S,Aquamarine) >> {
        - c codec.Codec
        - option *server.Option
        - sending sync.Mutex
        - header codec.Header
        - mu sync.Mutex
        - seq uint64
        - pending <font color=blue>map</font>[uint64]*Call
        - closing bool
        - shutdown bool

        - available() bool
        - registryCall(call *Call) (uint64, error)
        - removeCall(seq uint64) *Call
        - terminateCall(err error) 
        - receive() 
        - send(call *Call) 

        + Close() error
        + SendAsync(serviceMethod string, args any, reply any, done <font color=blue>chan</font> *Call) *Call
        + SendSync(serviceMethod string, args any, reply any) error

    }
}


namespace codec {
    interface Codec  {
        + ReadHeader( *Header) error
        + ReadBody( any) error
        + Write( *Header,  any) error

    }
    class GobCodec << (S,Aquamarine) >> {
        - conn io.ReadWriteCloser
        - buf *bufio.Writer
        - dec *gob.Decoder
        - enc *gob.Encoder

        + ReadHeader(h *Header) error
        + ReadBody(body any) error
        + Write(h *Header, body any) error
        + Close() error

    }
    class Header << (S,Aquamarine) >> {
        + ServiceMethod string
        + Seq uint64
        + Error string

    }
    class JsonCodec << (S,Aquamarine) >> {
        - conn io.ReadWriteCloser
        - buf *bufio.Writer
        - dec *json.Decoder
        - enc *json.Encoder

        + ReadHeader(h *Header) error
        + ReadBody(body any) error
        + Write(h *Header, body any) error
        + Close() error

    }
    class codec.Func << (T, #FF7700) >>  {
    }
    class codec.Type << (T, #FF7700) >>  {
    }
    class "<font color=blue>func</font>(io.ReadWriteCloser) Codec" as fontcolorbluefuncfontioReadWriteCloserCodec {
        'This class was created so that we can correctly have an alias pointing to this name. Since it contains dots that can break namespaces
    }
}

"codec.Codec" <|-- "codec.GobCodec"
"codec.Codec" <|-- "codec.JsonCodec"

namespace server {
    class Option << (S,Aquamarine) >> {
        + MagicNum int
        + CodecType codec.Type

    }
    class Server << (S,Aquamarine) >> {
        - serviceMap sync.Map

        - accept(listen net.Listener) 
        - serverConn(conn io.ReadWriteCloser) 
        - serverCodec(c codec.Codec) 
        - readRequest(c codec.Codec) (*request, error)
        - handleRequest(c codec.Codec, r *request, sending *sync.Mutex, wg *sync.WaitGroup) 
        - sendResponse(c codec.Codec, h *codec.Header, body any, sending *sync.Mutex) 
        - findService(serviceMethod string) (*service, *methodType, error)

        + Register(structure any) error

    }
    class methodType << (S,Aquamarine) >> {
        - method reflect.Method
        - numCalls uint64

        + ArgType reflect.Type
        + ReplyType reflect.Type

        - newArgv() reflect.Value
        - newReply() reflect.Value

        + NumCalls() uint64

    }
    class request << (S,Aquamarine) >> {
        - h *codec.Header
        - arg reflect.Value
        - mType *methodType
        - svc *service

    }
    class service << (S,Aquamarine) >> {
        - name string
        - typ reflect.Type
        - self reflect.Value
        - method <font color=blue>map</font>[string]*methodType

        - registryMethods() 
        - call(m *methodType, argv reflect.Value, reply reflect.Value) error

    }
}


"__builtin__.int" #.. "_struct.Foo"
"__builtin__.string" #.. "codec.Type"
"codec.fontcolorbluefuncfontioReadWriteCloserCodec" #.. "codec.Func"
@enduml
